data/derived/comb/progs/unify/prog6410.ml.out
Characters 49-86:
  if n <= 0 then [] else  add (digitsOfInt (n/10)) ([n mod 10]);;
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list list
       but an expression was expected of type
         (int list list -> int list list) list
